[tool.poetry]
name = "colorutil"
version = "0.9.1"
description = ""
authors = ["Simon Warchol <simonwarchol@g.harvard.edu>"]
readme = "README.md"
repository = "https://github.com/simonwarchol/colorutil"


[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.6"
numba = "^0.56.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
